// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog by default nothing is rendered as dialog should be hidden 1`] = `undefined`;

exports[`Dialog by default, when opened renders correctly 1`] = `
<div class="vnt-dialog-overlay">
  <div role="dialog" tabindex="0" aria-label="" class="vnt-dialog">
    <h1 class="vnt-dialog__title"></h1>
    <p class="vnt-dialog__content"></p>
    <div class="vnt-dialog__actions vnt-dialog__actions--single">
      <button type="button" class="vnt-button">
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog when custom dismiss button given renders correctly 1`] = `
<div class="vnt-dialog-overlay">
  <div role="dialog" tabindex="0" aria-label="Warning" class="vnt-dialog">
    <h1 class="vnt-dialog__title">Warning</h1>
    <p class="vnt-dialog__content">This operation is not allowed.</p>
    <div class="vnt-dialog__actions vnt-dialog__actions--single">
      <button type="button" class="vnt-button">
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog when custom primary and secondary buttons given in mixed order renders correctly 1`] = `
<div class="vnt-dialog-overlay">
  <div role="dialog" tabindex="0" aria-label="Confirm Delete Action" class="vnt-dialog">
    <h1 class="vnt-dialog__title">Confirm Delete Action</h1>
    <p class="vnt-dialog__content">Are you sure you want to delete this item?</p>
    <div class="vnt-dialog__actions vnt-dialog__actions--three">
      <button type="button" class="vnt-button">
        Delete
      </button>
      <button type="button" class="vnt-button">
        Ask later
      </button>
      <button type="button" class="vnt-button">
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog when custom primary and secondary buttons given in rendering order renders correctly 1`] = `
<div class="vnt-dialog-overlay">
  <div role="dialog" tabindex="0" aria-label="Confirm Delete Action" class="vnt-dialog">
    <h1 class="vnt-dialog__title">Confirm Delete Action</h1>
    <p class="vnt-dialog__content">Are you sure you want to delete this item?</p>
    <div class="vnt-dialog__actions vnt-dialog__actions--three">
      <button type="button" class="vnt-button">
        Delete
      </button>
      <button type="button" class="vnt-button">
        Ask later
      </button>
      <button type="button" class="vnt-button">
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog when custom primary button given renders correctly 1`] = `
<div class="vnt-dialog-overlay">
  <div role="dialog" tabindex="0" aria-label="Confirm Delete Action" class="vnt-dialog">
    <h1 class="vnt-dialog__title">Confirm Delete Action</h1>
    <p class="vnt-dialog__content">Are you sure you want to delete this item?</p>
    <div class="vnt-dialog__actions">
      <button type="button" class="vnt-button">
        Delete
      </button>
      <button type="button" class="vnt-button">
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog when custom primary, secondary and dismiss buttons given renders correctly 1`] = `
<div class="vnt-dialog-overlay">
  <div role="dialog" tabindex="0" aria-label="Confirm Delete Action" class="vnt-dialog">
    <h1 class="vnt-dialog__title">Confirm Delete Action</h1>
    <p class="vnt-dialog__content">Are you sure you want to delete this item?</p>
    <div class="vnt-dialog__actions vnt-dialog__actions--three">
      <button type="button" class="vnt-button">
        Delete
      </button>
      <button type="button" class="vnt-button">
        Ask later
      </button>
      <button type="button" class="vnt-button">
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog when custom secondary button given renders correctly 1`] = `
<div class="vnt-dialog-overlay">
  <div role="dialog" tabindex="0" aria-label="Confirm Delete Action" class="vnt-dialog">
    <h1 class="vnt-dialog__title">Confirm Delete Action</h1>
    <p class="vnt-dialog__content">Are you sure you want to delete this item?</p>
    <div class="vnt-dialog__actions">
      <button type="button" class="vnt-button">
        Ask later
      </button>
      <button type="button" class="vnt-button">
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog with title and content given renders correctly 1`] = `
<div class="vnt-dialog-overlay">
  <div role="dialog" tabindex="0" aria-label="Warning" class="vnt-dialog">
    <h1 class="vnt-dialog__title">Warning</h1>
    <p class="vnt-dialog__content">This operation is not allowed.</p>
    <div class="vnt-dialog__actions vnt-dialog__actions--single">
      <button type="button" class="vnt-button">
        Cancel
      </button>
    </div>
  </div>
</div>
`;
